# shadowmocap-sdk-cpp

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  Dockerfile  README.md  appveyor.yml  conanfile.py  conanfile.txt  coverage.make  sonar-project.properties  vcpkg.json
.github/workflows/: build.yml  ci.yml  cmake.yml  code-quality.yml  sanitizer.yml  test.yml
bench/: CMakeLists.txt  bench.cpp  bench_datastream.cpp  bench_message.cpp
example/: stream_to_csv.cpp
examples/: CMakeLists.txt  stream_to_csv.cpp
include/: shadowmocap.hpp
include/shadowmocap/: channel.hpp  config.hpp  datastream.hpp  message.hpp
src/: datastream.cpp  message.cpp
test/: CMakeLists.txt  mock_sdk_server.py  test.cpp  test_channel.cpp  test_message.cpp
tests/: CMakeLists.txt  test.cpp  test_channel.cpp  test_message.cpp
